<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="@color/material_orange_400"
            android:visibility="visible"
            android:elevation="@dimen/medium_dimen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgBackdrop"
            android:layout_width="0dp"
            android:layout_height="@dimen/backdrop_dimen"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:srcCompat="@mipmap/ic_launcher_round"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/imgPoster"
            android:layout_width="@dimen/poster_width"
            android:layout_height="@dimen/poster_height"
            android:layout_marginStart="@dimen/large_dimen"
            android:layout_marginTop="180dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@mipmap/ic_launcher_round"
            android:contentDescription="@string/todo" />


        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_dimen"
            android:layout_marginTop="@dimen/large_dimen"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.029"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/material_orange_400"
            android:contentDescription="@string/todo" />


        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_dimen"
            android:layout_marginTop="@dimen/medium_dimen"
            android:layout_marginEnd="@dimen/large_dimen"
            android:textSize="@dimen/xlarge_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.054"
            app:layout_constraintStart_toEndOf="@+id/imgPoster"
            app:layout_constraintTop_toBottomOf="@+id/imgBackdrop"
            tools:text="Movie Title" />

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_dimen"
            android:layout_marginTop="@dimen/medium_dimen"
            android:layout_marginEnd="@dimen/large_dimen"
            android:alpha="0.7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/imgPoster"
            app:layout_constraintTop_toBottomOf="@+id/txtRating"/>

        <TextView
            android:id="@+id/txtRating"
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_marginStart="@dimen/large_dimen"
            android:layout_marginTop="@dimen/medium_dimen"
            android:visibility="invisible"
            android:layout_marginEnd="@dimen/large_dimen"
            android:drawablePadding="@dimen/medium_dimen"
            app:drawableStartCompat="@drawable/ic_baseline_star_24"
            app:drawableTint="@color/material_orange_400"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgPoster"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle"
            tools:text="8.7" />

        <TextView
            android:id="@+id/labelOverview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_dimen"
            android:layout_marginTop="@dimen/large_dimen"
            android:layout_marginEnd="@dimen/large_dimen"
            android:alpha="0.7"
            android:text="@string/overview"
            android:visibility="invisible"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgPoster" />

        <TextView
            android:id="@+id/txtOverview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_dimen"
            android:layout_marginTop="@dimen/medium_dimen"
            android:layout_marginEnd="@dimen/large_dimen"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelOverview"
            app:layout_constraintVertical_bias="0.0"
            tools:text="" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

