<resources>
    <string name="app_name">Movie Catalogue Jetpack</string>
    <string name="tab_text_1">Movies</string>
    <string name="tab_text_2">Tv Show</string>
    <string name="overview">Overview </string>
    <string name="todo">TODO</string>

</resources>